--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,35 @@ body{
 .mainTitle{
     background: chartreuse;
     margin-top: 0px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     font-size: 80px;
+}
+
+.welcomeDiv{
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 25px;
+    margin-bottom: 30px;
+}
+
+.buttonDiv{
+    text-align: center;
+}
+
+.buttonDiv :nth-child(1){
+    margin-right: 20px;
+}
+
+button{
+    background: coral;
+    border-color: coral;
+    border-style: none;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 25px;
+    padding: 10px;
 }
 
 .aboutDiv{
@@ -35,6 +61,16 @@ body{
         font-size: 40px;
     }
 
+    .welcomeDiv{
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    button{
+        font-size: 10px;
+        margin-top: 25px;
+    }
+
     .aboutHeaderOne{
         font-size: 16px;
     }
@@ -45,6 +81,8 @@ body{
 
     .aboutParagraph{
         font-size: 8px;
+        margin-left: 15px;
+        margin-right: 15px
     }
 
     .deployedDiv{
